--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,11 @@ h6 {
   margin-bottom: 0;
 }
 
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .container {
   max-width: 1158px;
   padding-left: 15px;
@@ -49,9 +54,16 @@ h6 {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
+
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
 }
 
 .header-navigation {
+  display: flex;
 }
 
 .heder-logo {
@@ -71,10 +83,12 @@ h6 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
+  margin-right: 76px;
 }
 
 .heder-menu-list {
-  padding-bottom: 48px;
+  display: flex;
+  gap: 40px;
 }
 
 .heder-menu-item {
@@ -95,9 +109,12 @@ h6 {
 
 .header-navigation-address {
   font-style: normal;
+  margin-left: auto;
 }
 
 .header-navigation-list {
+  display: flex;
+  gap: 40px;
 }
 
 .header-navigation-item {
@@ -124,6 +141,11 @@ h6 {
   background-color: #2e2f42;
 }
 
+.hero-container {
+  padding-top: 188px;
+  padding-bottom: 188px;
+}
+
 .hero-title {
   font-weight: 700;
   font-size: 56px;
@@ -131,6 +153,14 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin: auto;
+  margin-bottom: 48px;
+  max-width: 496px;
+}
+
+.container-hero-btn {
+  display: flex;
+  justify-content: center;
 }
 
 .hero-button {
@@ -143,6 +173,10 @@ h6 {
 
   background: #4d5ae5;
   cursor: pointer;
+
+  padding: 16px 32px;
+  border-radius: 4px;
+  border: none;
 }
 
 .hero-button:hover,
@@ -157,10 +191,18 @@ h6 {
 .section-possibilities {
 }
 
+.possibilities-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .list-of-possibilities {
+  display: flex;
+  gap: 24px;
 }
 
 .possibilities-item {
+  width: calc((100% - 3 * 24px) / 4);
 }
 
 .possibilities-subtitle {
@@ -186,6 +228,11 @@ h6 {
   background-color: #f4f4fd;
 }
 
+.team-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 .team-title {
   text-transform: capitalize;
   font-weight: 700;
@@ -194,13 +241,22 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .team-list {
+  display: flex;
+  gap: 24px;
 }
 
 .team-item {
   background-color: #fff;
+  border-radius: 0 0 4px 4px;
+  padding: 0px 0px 32px 0px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  width: 264px;
+  height: 380px;
 }
 
 .team-img {
@@ -213,6 +269,7 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-top: 32px;
 }
 
 .team-function {
@@ -222,6 +279,7 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  margin-top: 8px;
 }
 
 /* --------------------------------------------------------  */
@@ -229,6 +287,11 @@ h6 {
 /* --------------------- Section Portfolio ------------------- */
 
 .section-portfolio {
+}
+
+.portfolio-container {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 .portfolio-title {
@@ -239,9 +302,13 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 48px 24px;
 }
 
 .portfolio-item {
@@ -250,13 +317,21 @@ h6 {
 .portfolio-img {
 }
 
+.box-portfolio-item {
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  padding: 32px 16px;
+}
+
 .portfolio-services {
   font-weight: 500;
   font-size: 20px;
   line-height: 120%;
   letter-spacing: 0.02em;
-  text-align: center;
+  text-align: left;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -264,7 +339,7 @@ h6 {
   font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.02em;
-  text-align: center;
+  text-align: left;
   color: #434455;
 }
 
@@ -274,6 +349,11 @@ h6 {
 
 .section-footer {
   background-color: #2e2f42;
+}
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .footer-logo-link {
@@ -300,6 +380,8 @@ h6 {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  margin-top: 16px;
+  max-width: 264px;
 }
 
 /* ------------------------------------------------------------ */
