--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ a {
   color: #2e2f42;
 }
 
-.p,
+p,
 h1,
 h2,
 h3,
@@ -40,7 +40,7 @@ h6 {
   margin-right: auto;
 }
 
-.img {
+img {
   display: block;
 }
 
@@ -56,9 +56,6 @@ h6 {
 /* ------------------ Header  ------------------------- */
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
-
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -94,8 +91,6 @@ h6 {
 .heder-menu-list {
   display: flex;
   gap: 40px;
-  padding-top: 24px;
-  padding-bottom: 24px;
 }
 
 .heder-menu-item {
@@ -125,6 +120,8 @@ h6 {
 }
 
 .header-navigation-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .header-navigation-link {
@@ -199,9 +196,6 @@ h6 {
   padding-bottom: 120px;
 }
 
-.possibilities-container {
-}
-
 .list-of-possibilities {
   display: flex;
   gap: 24px;
@@ -237,9 +231,6 @@ h6 {
   padding-bottom: 120px;
 }
 
-.team-container {
-}
-
 .team-title {
   text-transform: capitalize;
   font-weight: 700;
@@ -269,6 +260,11 @@ h6 {
 .team-img {
 }
 
+.team-container {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
 .team-name-member {
   font-weight: 500;
   font-size: 20px;
@@ -276,7 +272,7 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  margin-top: 32px;
+  margin-bottom: 8px;
 }
 
 .team-function {
@@ -286,7 +282,6 @@ h6 {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  margin-top: 8px;
 }
 
 /* --------------------------------------------------------  */
@@ -360,9 +355,6 @@ h6 {
   padding-bottom: 100px;
 }
 
-.footer-container {
-}
-
 .footer-logo-link {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -371,6 +363,8 @@ h6 {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-studio {
@@ -381,7 +375,6 @@ h6 {
   text-transform: uppercase;
   color: #f4f4fd;
   display: inline-block;
-  margin-bottom: 16px;
 }
 
 .footer-text {
