--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,8 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 
 .heder-menu-link:hover,
