--- a/css/styles.css
+++ b/css/styles.css
@@ -45,10 +45,15 @@ img {
 }
 
 .visually-hidden {
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0, 0, 0, 0);
   overflow: hidden;
+  white-space: nowrap;
 }
 
 /* ----------------------------------------------------- */
