--- a/css/styles.css
+++ b/css/styles.css
@@ -208,7 +208,7 @@ img {
 }
 
 .possibilities-item {
-  width: calc((100% - 3 * 24px) / 4);
+  width: calc((100% - 72px) / 4);
 }
 
 .possibilities-subtitle {
