--- a/css/styles.css
+++ b/css/styles.css
@@ -193,9 +193,9 @@ img {
   background: #404bbf;
 }
 
-/* --------------------------------------------------------------- */
+/* ---------------------------------------------------------------- */
 
-/* --------------------- Section Possibilities ------------------- */
+/* --------------------- Section Possibilities -------------------- */
 
 .section-possibilities {
   padding-top: 120px;
