--- a/css/styles.css
+++ b/css/styles.css
@@ -248,6 +248,9 @@ img {
   padding-bottom: 120px;
 }
 
+.team-container {
+}
+
 .team-title {
   text-transform: capitalize;
   font-weight: 700;
@@ -271,7 +274,7 @@ img {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   width: 264px;
-  height: 380px;
+  height: 428px;
 }
 
 .team-img {
@@ -299,6 +302,37 @@ img {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+}
+
+.icon-list {
+  display: flex;
+  gap: 24px;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+
+.icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(77, 90, 229, 1);
+  border-radius: 50%;
+}
+
+.icon-link:hover {
+  background-color: rgba(49, 208, 170, 1);
+}
+
+.icon-team {
+  fill: rgba(244, 244, 253, 1);
 }
 
 /* --------------------------------------------------------  */
